--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,16 @@
         <h1><a href="{{ path('main_home') }}"><img src="{{ asset('img/logo.png') }}" alt="Bucket-List"></a></h1>
         {% include('inc/nav.html.twig') %}
     </header>
+
+        {# read and display all flash messages #}
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
     <main>
         {% block body %}{% endblock %}
     </main>
