--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -3,5 +3,6 @@
         <li><a href="{{ path('main_home') }}" title="Accueil">Accueil</a></li>
         <li><a href="{{ path('main_aboutUs') }}" title="About Us">About us</a></li>
         <li><a href="{{ path('wish_list') }}" title="Wish-list">Wish-list</a></li>
+        <li><a href="{{ path('wish_add') }}" title="Ajouter">Ajouter</a></li>
     </ul>
 </nav>
