affiche catégories dans form, list et detail.

--- a/templates/wish/details.html.twig
+++ b/templates/wish/details.html.twig
@@ -6,12 +6,10 @@
 
 {% block body %}
     <h2>{{ wish.title }}</h2>
-    <div class="category">
-        <div>Catégorie : {{ wish.category.name }}</div>
-    </div>
+
     <div>{{ wish.description }}</div>
     <br>
-    <div>Créé par {{ wish.author }} le {{ wish.dateCreated |date ('d/m/Y') }}</div>
+    <div class="info">Créé par {{ wish.author }} le {{ wish.dateCreated |date ('d/m/Y') }} dans {{ wish.category.name }}</div>
 
 {% endblock %}
 
