--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -8,7 +8,7 @@
                 <a href="{{ path('wish_details',{'id': wish.id}) }}" title="Voir le détail du voeu ">
                     {{ wish.title }} </a>
                 <br>
-                <div>{{ wish.category.name }}</div>
+                <div class="category-list">{{ wish.category.name }}</div>
 
             </article>
             </br>
